Simple input display and reset inputted text with jquery

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + Vue</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <p>{{foo}}</p>
+      <p>Likewise constant quantitive growth and the scope of our activity represents an interesting experiment of economic practicability of decisions made. Thus hi-tech concept of the social system contributes to the preparing and implementation of economic practicability of decisions made. Likewise new model of the organisational activity significantly conditions the creation of strengthening the democratic system.</p>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
